--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -17,9 +17,9 @@
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <a href="/u/<%= longURL %>"><%= longURL %></a></h5>
+        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">
-          Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
+          Short URL ID: <a href="/urls/<%= id %>"><%= id %></a>
         </p>
       </div>
       <div class="card-footer text-muted"></div>
