--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,7 +32,8 @@
               <td> <%= id %></td>
 
               <td> <%= urls[id] %> </td>
-
+              
+              <!-- Creates the delete button and the submit action POSTS -->
               <td><form method="POST" action="/urls/<%= id %>/delete"><button type ="submit" class="btn btn-outline-danger">Delete</button></form></td>
 
 
