--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -21,6 +21,7 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
@@ -32,6 +33,9 @@
               <td> <%= id %></td>
 
               <td> <%= urls[id] %> </td>
+
+              <!-- Creates the edit button and the submit action POSTS --> 
+              
               
               <!-- Creates the delete button and the submit action POSTS -->
               <td><form method="POST" action="/urls/<%= id %>/delete"><button type ="submit" class="btn btn-outline-danger">Delete</button></form></td>
