--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -35,6 +35,7 @@
               <td> <%= urls[id] %> </td>
 
               <!-- Creates the edit button and the submit action POSTS --> 
+              <td><form method="GET" action="/urls/<%= id %>/"><button type ="submit" class="btn btn-outline-primary">Edit</button></form></td>
               
               
               <!-- Creates the delete button and the submit action POSTS -->
