added username input and login button

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -36,6 +36,7 @@
             name="longURL"
             id="longURL"
             placeholder="<%= longURL %>"
+            style="width: 300px; margin: 1em"
             >
             <button type="submit" class="btn btn-primary">Submit</button></form>
         </div>
