--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,6 +17,17 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+      <div>
+        <form method="POST" action="/login" class="form-inline">
+          <input
+          class="form-control"
+          type="text"
+          name="username"
+          placeholder="Username"
+          style="width: 300px; margin: 1em;"
+          >
+          <button type="submit" class="btn btn-outline-dark">Login</button></form>
+      </div>
     </div>
   </nav>
 </header>
