--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,7 +17,14 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+
+      <!-- If no username, show the log in input field -->
       <div>
+        <!-- If there's a username, show the logged in as info -->
+        <% if (username) { %> 
+          <span>Logged in as: <%= username %> </span>
+        
+      <%  } else { %>
         <form method="POST" action="/login" class="form-inline">
           <input
           class="form-control"
@@ -27,7 +34,9 @@
           style="width: 300px; margin: 1em;"
           >
           <button type="submit" class="btn btn-outline-dark">Login</button></form>
-      </div>
+      <% } %> 
+        </div>
+
     </div>
   </nav>
 </header>
