--- a/views/urls_registration.ejs
+++ b/views/urls_registration.ejs
@@ -18,7 +18,7 @@
   <%- include('partials/_header') %>
 
   <main style="margin: 1em;">
-    
+
     <h4> Register for an account!</h4>
       <form method="POST" action="/register" class="form-inline">
     <label>Email: </label>
@@ -38,7 +38,8 @@
     placeholder="Password"
     style="width: 300px; margin: 1em"
     >
-
+  
+    <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
 
