created new log in form template that sends a POST request to log in. Added GET route that renders urls_login. Added Register and Login buttons that redirect to the corredsponding page.

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -29,19 +29,12 @@
               <!-- If no username, show the log in input field -->
         <%  } else { %>
           <div class="form-inline">
-            <form method="POST" action="/login" class="form-inline">
-              <input
-              class="form-control"
-              type="email"
-              name="username"
-              placeholder="Username"`
-              style="width: 300px; margin: 1em;"
-              >
-              <button type="submit" class="btn btn-outline-dark">Login</button>
+            <form method="GET" action="/login" class="form-inline">
+              <button type="submit" class="btn btn-outline-dark" a href="/login" >Login</button>
             </form>
-            <!-- <form method="POST" action="/register" class="form-inline">
-              <button type="submit" class="btn btn-outline-dark" >Register</button>
-            </form> -->
+            <form method="GET" action="/register" class="form-inline">
+              <button type="submit" class="btn btn-outline-dark" a href="/register">Register</button>
+            </form>
           </div>
         <% } %> 
       </div>
