--- a/views/urls_registration.ejs
+++ b/views/urls_registration.ejs
@@ -19,15 +19,15 @@
 
   <main style="margin: 1em;">
 
-    <h4> Register for an account!</h4>
-      <form method="POST" action="/register" class="form-inline">
+    <h3> Create Account </h3>
+    <form method="POST" action="/register" class="form-group">
     <label>Email: </label>
     <input
     class="form-control"
     type="email"
     name="email"
     placeholder="Email"
-    style="width: 300px; margin: 1em;"
+    style="width: 300px; margin-bottom: 10px;"
     >
 
     <label>Enter Password:</label>
@@ -36,10 +36,10 @@
     type="text"
     name="password"
     placeholder="Password"
-    style="width: 300px; margin: 1em"
+    style="width: 300px;"
     >
   
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary" style="margin-top: 10px;">Submit</button>
     </form>
 
 
