Changed the structure of the urlDatabase. Users can only edit or delete their own URLs

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,7 +32,7 @@
 
               <td> <%= id %></td>
 
-              <td> <%= urls[id] %> </td>
+              <td> <%= urls[id].longURL %> </td>
 
               <!-- Creates the edit button and the submit action POSTS --> 
               <td><form method="GET" action="/urls/<%= id %>/"><button type ="submit" class="btn btn-outline-primary">Edit</button></form></td>
