changed Enter Password input type to password

--- a/views/urls_registration.ejs
+++ b/views/urls_registration.ejs
@@ -33,7 +33,7 @@
     <label>Enter Password:</label>
     <input
     class="form-control"
-    type="text"
+    type="password"
     name="password"
     placeholder="Password"
     style="width: 300px;"
