--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -18,9 +18,9 @@
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+        <h5 class="card-title">TinyURL for: <%= longURL.longURL %></h5>
         <p class="card-text">
-          Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
+          Short URL ID: <a href="/urls/<%= id %>"><%= id %></a>
         </p>
       </div>
 
@@ -35,7 +35,7 @@
             type="text" 
             name="longURL"
             id="longURL"
-            placeholder="<%= longURL %>"
+            placeholder="<%= longURL.longURL %>"
             style="width: 300px; margin: 1em"
             >
             <button type="submit" class="btn btn-primary">Submit</button></form>
