--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -33,7 +33,7 @@
     <label>Enter Password:</label>
     <input
     class="form-control"
-    type="text"
+    type="password"
     name="password"
     placeholder="Password"
     style="width: 300px;"
