--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -18,9 +18,7 @@
           <h5 class="card-title">TinyURL for: <%= longURL.longURL %>
           </h5>
           <p class="card-text">
-            Short URL ID: <a href="/urls/<%= id %>">
-              <%= id %>
-            </a>
+            Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
           </p>
         </div>
 
@@ -31,8 +29,12 @@
             <h3>Edit</h3>
             <form method="POST" action="/urls/<%= id %>/">
               <label>New URL: </label>
-              <input type="text" name="longURL" id="longURL" placeholder="<%= longURL.longURL %>"
-                style="width: 300px; margin: 1em">
+              <input 
+              type="text" 
+              name="longURL" 
+              id="longURL" 
+              placeholder="<%= longURL.longURL %>"
+              style="width: 300px; margin: 1em">
               <button type="submit" class="btn btn-primary">Submit</button>
             </form>
           </div>
