--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -18,7 +18,7 @@
           <h5 class="card-title">TinyURL for: <%= longURL.longURL %>
           </h5>
           <p class="card-text">
-            Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
+            Short URL ID: <a href="/u/<%= id %>" target="_blank" ><%= id %></a>
           </p>
         </div>
 
