--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,45 +1,37 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+      aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <div class="form-inline">
-          <!-- If there's a username, show the logged in as info -->
-            <% if (userID) { %> 
-              <p>Logged in as: <%= email %> </p>
 
+        <!-- If there's a username, show the logged in as info -->
+
+        <% if (userID) { %>
               <form method="POST" action="/logout" class="form-inline">
+                  <span>Logged in as: <%= email %></span>
+                  <button type="submit" class="btn btn-outline-dark" style="margin-left: 10px" >Logout</button>
+                </form>
 
-              <button type="submit" class="btn btn-outline-dark" style="margin-left: 5px">Logout</button>
-              </form>
+          <!-- If no username, show the log in input field -->
+          <% } else { %>
+            <form method="GET" action="/login">
+              <a class="nav-item nav-link" href="/login">Login</a>
+            </form>
 
-            </div>
-                <!-- If no username, show the log in input field -->
-          <%  } else { %>
-              <form method="GET" action="/login" class="form-inline">
-                <a class="nav-item nav-link" href="/login">Login</a>
-              </form>
+            <form method="GET" action="/register">
+              <a class="nav-item nav-link" href="/register">Register</a>
+            </form>
+            <% } %>
 
-              <form method="GET" action="/register" class="form-inline">
-                <a class="nav-item nav-link" href="/register">Register</a>
-              </form>
 
-          <% } %> 
-        </div>
       </div>
+    </div>
     </div>
   </nav>
 </header>
