--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,7 +15,7 @@
         <% if (userID) { %>
               <form method="POST" action="/logout" class="form-inline">
                   <span>Logged in as: <%= email %></span>
-                  <button type="submit" class="btn btn-outline-dark" style="margin-left: 10px" >Logout</button>
+                  <button type="submit" class="btn btn-outline-dark" style="margin-left: 10px;" >Logout</button>
                 </form>
 
           <!-- If no username, show the log in input field -->
